# delegant

./: LICENSE  README.md  index.html  package.json  pnpm-lock.yaml
public/: cursor.html
src/: App.tsx  index.css
src-tauri/: Cargo.toml  check_err.txt  check_err2.txt  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: error.rs  lib.rs  state.rs
src-tauri/src/agent/: action.rs  history.rs  loop_runner.rs  mod.rs  tools.rs
src-tauri/src/ai/: anthropic.rs  mod.rs  ollama.rs  openai.rs  openrouter.rs  types.rs
src-tauri/src/commands/: agent.rs  input.rs  mod.rs  screenshot.rs  settings.rs  shell.rs  window.rs
src-tauri/src/input/: keyboard.rs  mouse.rs
src-tauri/src/platform/: linux.rs  macos.rs  mod.rs  windows.rs
src-tauri/src/screen/: a11y.rs  capture.rs  mod.rs
src-tauri/src/shell/: executor.rs
src/components/: ActionEntry.tsx  ActionLog.tsx  EstimatedTime.tsx  SettingsModal.tsx  SetupWizard.tsx  Spinner.tsx  StartScreen.tsx  StopButton.tsx  Taskbar.tsx  TaskbarExpanded.tsx  Toast.tsx
src/lib/: commands.ts  events.ts  types.ts  windowManager.ts
src/stores/: agentStore.ts  settingsStore.ts  uiStore.ts
